# APP-AGENT-CURSOR

./: .env.example  .gitignore  AGENTS.md  BUGBOT.md  CURSOR-AGENT-OS.md  Dockerfile  README.md  Requisitos.MD  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20250330_0001_initial_baseline.py  20260330_0001_create_tasks_table.py  20260330_0002_users.py  20260330_0003_licenses.py  20260330_0004_seed_license_test1234.py  20260331_0005_basic_data.py  20260331_0006_calculators.py  20260331_0007_importancia_eventos.py  20260331_0008_categorias_produtos.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  tasks.py
backend/app/core/: __init__.py  config.py  reset_token.py  security.py  settings.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  basic_data.py  calculator.py  categoria.py  evento_venda.py  license.py  mes_importancia.py  produto.py  (+1 more)
backend/tests/: conftest.py  register_payload.py  test_admin_api.py  test_auth.py  test_auth_cadastro.py  test_basic_data.py  test_calculator_api.py  test_calculator_math.py  test_categorias_produtos_api.py  test_diagnostico_api.py  test_health.py  test_importancia_api.py  test_importancia_math.py  test_license_service.py  test_prioridades_simulador_api.py  test_prioridades_simulador_math.py  test_t3_profile_geo_password.py  test_tasks_create.py  test_tasks_delete.py  test_tasks_list.py  test_tasks_patch.py
(+135 files in other folders)
