[project]
name = "appgetup-backend"
version = "0.1.0"
description = "Backend FastAPI do appGetUp"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "pydantic-settings>=2.3.0",
  "alembic>=1.13.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
